# MediaCopier

./: .gitignore  Agogo Process.TXT  Agogo Process.md  Readme.md  Subscriber Process.TXT  ToDo.txt  mediacopier.py  pyproject.toml
base/: console.py  copy.py  copy_with_progress.py  utils.py
config/MediaCopier/: config.library.paths.yaml  config.yaml  show_to_folder_mappings.yaml
mediacopier/: agogo.py  bossanova808.py  clean.py  cli.py  config.py  filter.py  finish.py  init.py  jellyfin.py  kodi.py  update.py
models/: copy_item.py  store.py
progress/: copy_progress.py  test.py
src/console/: cmdline.py
src/data/: copy_item.py  store.py
src/log/: log.py
src/mediacopier/: agogo.py  bossanova808.py  clean.py  cli.py  config.py  filter.py  finish.py  init.py  kodi.py  update.py
src/models/: store.py
src/progress/: copy_progress.py  test.py
src/utils/: copy.py  copy_with_progress.py  utils.py
utils/: utils.py
